compile/two/files/tmp_1557852190.1.Compile_error
./files/tmp_1557852190.1.cpp:2:15: error: expected constructor, destructor, or type conversion before ‘for’
  * Definition for singly-linked list.
               ^
